Update issue templates - bug, refactor

--- a/.github/ISSUE_TEMPLATE/🧈-기능-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/🧈-기능-템플릿.md
@@ -1,9 +1,9 @@
 ---
-name: "\U0001F9C8 Feature Template"
+name: "\U0001F9C8 기능 템플릿"
 about: 기능 추가에 대한 작업 사항을 적습니다
 title: "[\U0001F9C8 FEATURE]"
 labels: ''
-assignees: ''
+assignees: gunahyeon
 
 ---
 
